--- a/src/main/resources/db/postgres.properties
+++ b/src/main/resources/db/postgres.properties
@@ -14,3 +14,4 @@ jdbc.initLocation=initDB.sql
 jpa.showSql=true
 hibernate.format_sql=true
 hibernate.use_sql_comments=true
+hibernate.dialect_sql=org.hibernate.dialect.PostgreSQL9Dialect
