--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,9 @@ cache:
 
 # https://docs.travis-ci.com/user/database-setup/#PostgreSQL
 before_script:
-- psql -c 'create database topjava' -U postgres
-#- psql -c 'create user "user"; grant all privileges on database topjava to "user"' -U postgres
+- psql -c "create database topjava;" -U postgres
+- psql -c "create user 'user' with password 'password';" -U postgres
+- psql -c  "grant all privileges on database topjava to 'user';" -U postgres
 
 # https://docs.travis-ci.com/user/customizing-the-build#Building-Specific-Branches
 branches:
