--- a/.travis.yml
+++ b/.travis.yml
@@ -9,14 +9,17 @@ cache:
 
 # https://docs.travis-ci.com/user/database-setup/#PostgreSQL
 before_script:
-- psql -c "create database topjava;" -U postgres
-- psql -c "create user 'user' with password 'password';" -U postgres
-- psql -c  "grant all privileges on database topjava to 'user';" -U postgres
+- psql -U postgres -c "create database topjava;"
+- psql -U postgres -c "create user 'user' with password 'password';"
+- psql -U postgres -c  "grant all privileges on database topjava to 'user';"
 
 # https://docs.travis-ci.com/user/customizing-the-build#Building-Specific-Branches
 branches:
   only:
   - HW04
+
+addons:
+  postgresql: "10"
 
 # https://stackoverflow.com/a/49852690/548473:
 services:
