--- a/src/main/resources/db/postgres.properties
+++ b/src/main/resources/db/postgres.properties
@@ -6,7 +6,7 @@ database.url=jdbc:postgresql://localhost:5432/topjava
 database.username=user
 database.password=password
 #database.username=postgres
-#database.password=
+#database.password=postgres
 database.driverClassName=org.postgresql.Driver
 
 database.init=true
