--- a/.travis.yml
+++ b/.travis.yml
@@ -9,9 +9,8 @@ cache:
 
 # https://docs.travis-ci.com/user/database-setup/#PostgreSQL
 before_script:
-- psql -U postgres -c "create database topjava;"
-- psql -U postgres -c "create user user1;"
-- psql -U postgres -c  "grant all privileges on database topjava to user1;"
+  - psql -c 'create database topjava' -U postgres
+  - psql -c 'create user user1; grant all privileges on database topjava to user1' -U postgres
 
 # https://docs.travis-ci.com/user/customizing-the-build#Building-Specific-Branches
 branches:
